--- a/templates/login.html
+++ b/templates/login.html
@@ -405,7 +405,13 @@
         {% endif %}
         <form method="POST" action="{{ url_for('login') }}">
             <input type="hidden" name="csrf_token" value="{{ csrf_token }}">
-            <input type="hidden" name="branch" id="selectedBranch" value="vietnam">
+            <div class="mb-3 input-group">
+                <span class="input-group-text"><i class="fas fa-globe"></i></span>
+                <select class="form-control" id="branch" name="branch" required>
+                    <option value="vietnam">Vietnam</option>
+                    <option value="japan">Japan</option>
+                </select>
+            </div>
             <div class="mb-3 input-group">
                 <span class="input-group-text"><i class="fas fa-user"></i></span>
                 <input type="text" class="form-control" id="username" name="username" placeholder="{{ _('Enter your username') }}" required>
