Add pagination for departments and asset types in settings page (backend + frontend)

--- a/templates/settings.html
+++ b/templates/settings.html
@@ -36,6 +36,7 @@
                             </thead>
                             <tbody></tbody>
                         </table>
+                        <div id="departmentsPagination" class="mt-2"></div>
                     </div>
                 </div>
             </div>
@@ -61,6 +62,7 @@
                             </thead>
                             <tbody></tbody>
                         </table>
+                        <div id="assetTypesPagination" class="mt-2"></div>
                     </div>
                 </div>
             </div>
